Add 'routed' ML2 type driver
Change-Id: I6c899ab29caf6434b0ba703b78a53ca11472596a

--- a/setup.cfg
+++ b/setup.cfg
@@ -159,6 +159,7 @@ neutron.service_providers =
 neutron.ml2.type_drivers =
     flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
+    routed = neutron.plugins.ml2.drivers.type_local:RoutedTypeDriver
     vlan = neutron.plugins.ml2.drivers.type_vlan:VlanTypeDriver
     gre = neutron.plugins.ml2.drivers.type_gre:GreTypeDriver
     vxlan = neutron.plugins.ml2.drivers.type_vxlan:VxlanTypeDriver
