--- a/tox.ini
+++ b/tox.ini
@@ -133,6 +133,7 @@ commands = python -m testtools.run \
     neutron.tests.unit.plugins.ml2.drivers.test_type_gre \
     neutron.tests.unit.plugins.ml2.drivers.arista.test_mechanism_arista \
     neutron.tests.unit.plugins.ml2.drivers.test_type_local \
+    neutron.tests.unit.plugins.ml2.drivers.test_type_routed \
     neutron.tests.unit.plugins.ml2.drivers.mechanism_logger \
     neutron.tests.unit.plugins.ml2.drivers.cisco.apic.test_apic_sync \
     neutron.tests.unit.plugins.ml2.drivers.cisco.apic.base \
