--- a/setup.cfg
+++ b/setup.cfg
@@ -159,7 +159,7 @@ neutron.service_providers =
 neutron.ml2.type_drivers =
     flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
-    routed = neutron.plugins.ml2.drivers.type_local:RoutedTypeDriver
+    routed = neutron.plugins.ml2.drivers.type_routed:RoutedTypeDriver
     vlan = neutron.plugins.ml2.drivers.type_vlan:VlanTypeDriver
     gre = neutron.plugins.ml2.drivers.type_gre:GreTypeDriver
     vxlan = neutron.plugins.ml2.drivers.type_vxlan:VxlanTypeDriver
